--- a/Decision Tree Testing.ipynb
+++ b/Decision Tree Testing.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "id": "bd24d066",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import webbrowser\n",
+    "import urllib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 84,
    "id": "860c64ac",
    "metadata": {},
    "outputs": [],
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 85,
    "id": "bbc5bfb6",
    "metadata": {},
    "outputs": [],
@@ -66,13 +68,20 @@
     "        return f\"[label=<{toAddStr}>, fillcolor=\\\"#ffffff\\\"]\"\n",
     "        \n",
     "class LeafNode():\n",
-    "    def __init__(self, value, entropy = None, gini = None):\n",
+    "    def __init__(self, value, size, entropy = None, gini = None):\n",
     "        self.value = value\n",
     "        self.entropy = entropy\n",
     "        self.gini = gini\n",
+    "        self.size = size\n",
     "        \n",
     "    def to_dot(self):\n",
-    "        return f\"[label=<class = {self.value}<br/> entropy = {round(self.entropy, 2)}>, fillcolor=\\\"#ffffff\\\"]\"\n",
+    "        toAdd = []\n",
+    "        toAdd.append(f\"<B>class = {self.value}</B><br/>\")\n",
+    "        toAdd.append(f\"entropy = {round(self.entropy, 2)}\")\n",
+    "        toAdd.append(f\"size = {self.size}\")\n",
+    "        \n",
+    "        toAddStr = \"<br/>\".join(toAdd)\n",
+    "        return f\"[label=<{toAddStr}>, fillcolor=\\\"#ffffff\\\"]\"\n",
     "    \n",
     "\n",
     "class DecisionTreeClassifier:\n",
@@ -122,7 +131,8 @@
     "        value = df[target_col].mode()[0]\n",
     "        entropy = self.get_entropy(df, target_col)\n",
     "        gini = self.get_gini(df, target_col)\n",
-    "        return LeafNode(value, entropy, gini)\n",
+    "        size = len(df)\n",
+    "        return LeafNode(value, size, entropy, gini)\n",
     "    \n",
     "    def get_best_split(self, df, target_col):\n",
     "        \n",
@@ -192,6 +202,12 @@
     "edge [fontname=\"helvetica\"] ;\n",
     "                {linesStr}\n",
     "}}\"\"\"\n",
+    "    \n",
+    "        \n",
+    "    def show_tree(self):\n",
+    "        text = urllib.parse.urlencode({\"thing\": self.print_tree()})\n",
+    "        text = \"https://dreampuf.github.io/GraphvizOnline/#\" + text[6:].replace(\"+\", \"%20\")\n",
+    "        webbrowser.open_new_tab(text)\n",
     "        \n",
     "        \n",
     "        \n",
@@ -201,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 95,
    "id": "0eb808cc",
    "metadata": {},
    "outputs": [],
@@ -211,51 +227,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 96,
    "id": "dec3ad85",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "\n",
     "d.fit(df, \"target\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 97,
    "id": "f11aab4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d.show_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "c7a1d967",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "edfc9fa6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "digraph Tree {\n",
-      "node [shape=box, style=\"filled, rounded\", color=\"black\", fontname=\"helvetica\"] ;\n",
-      "edge [fontname=\"helvetica\"] ;\n",
-      "                0 [label=<<B>petal length (cm) &le; 1.9</B><br/><br/>info gain = 0.92>, fillcolor=\"#ffffff\"];\n",
-      "1 [label=<class = 0<br/> entropy = 0.0>, fillcolor=\"#ffffff\"];\n",
-      "0 -> 1;\n",
-      "2 [label=<<B>petal width (cm) &le; 1.7</B><br/><br/>info gain = 0.69>, fillcolor=\"#ffffff\"];\n",
-      "0 -> 2;\n",
-      "3 [label=<<B>petal length (cm) &le; 4.9</B><br/><br/>info gain = 0.21>, fillcolor=\"#ffffff\"];\n",
-      "2 -> 3;\n",
-      "4 [label=<class = 1<br/> entropy = 0.15>, fillcolor=\"#ffffff\"];\n",
-      "3 -> 4;\n",
-      "5 [label=<class = 2<br/> entropy = 0.92>, fillcolor=\"#ffffff\"];\n",
-      "3 -> 5;\n",
-      "6 [label=<<B>petal length (cm) &le; 4.8</B><br/><br/>info gain = 0.09>, fillcolor=\"#ffffff\"];\n",
-      "2 -> 6;\n",
-      "7 [label=<class = 2<br/> entropy = 0.92>, fillcolor=\"#ffffff\"];\n",
-      "6 -> 7;\n",
-      "8 [label=<class = 2<br/> entropy = 0.0>, fillcolor=\"#ffffff\"];\n",
-      "6 -> 8;\n",
-      "}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(d.print_tree())"
+    "\n"
    ]
   },
   {
@@ -319,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e6b570f4",
+   "id": "4b6a5e12",
    "metadata": {},
    "outputs": [
     {
