--- a/Decision Tree Testing-Copy1.ipynb
+++ b/Decision Tree Testing-Copy1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "bd24d066",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "860c64ac",
    "metadata": {},
    "outputs": [],
@@ -30,14 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "bbc5bfb6",
    "metadata": {},
    "outputs": [],
    "source": [
     "class DecisionNodeNumerical():\n",
-    "    def __init__(self, feature_name = None, threshold = None, left = None, right = None, info_gain = None):\n",
+    "    def __init__(self, feature_name = None, feature_idx = None, threshold = None, left = None, right = None, info_gain = None):\n",
     "        self.feature_name = feature_name\n",
+    "        self.feature_idx = feature_idx\n",
     "        self.threshold = threshold\n",
     "        self.left = left\n",
     "        self.right = right\n",
@@ -46,7 +47,6 @@
     "    def set_info_gain(self, info_gain):\n",
     "        self.info_gain = info_gain\n",
     "\n",
-    "        \n",
     "    def set_left(self, left):\n",
     "        self.left = left\n",
     "        \n",
@@ -145,7 +145,7 @@
     "            \n",
     "            possible_thresholds = np.unique(df[column])\n",
     "            for threshold in possible_thresholds:\n",
-    "                decisionNode = DecisionNodeNumerical(feature_name=column, threshold=threshold)\n",
+    "                decisionNode = DecisionNodeNumerical(feature_name=column, feature_idx = df.columns.get_loc(column), threshold=threshold)\n",
     "                df_left, df_right = self.split(df, decisionNode)\n",
     "                curr_info_gain = self.get_information_gain(df, df_left, df_right, target_col, \"entropy\")\n",
     "#                 print(curr_info_gain)\n",
@@ -174,7 +174,20 @@
     "            \n",
     "    def fit(self, df, target):\n",
     "        self.root = self.build_tree(df, target, 0)\n",
+    "    \n",
+    "    def node_prediction(self, row, node):\n",
+    "        if hasattr(node, 'value'):\n",
+    "            return node.value\n",
+    "        val = row[node.feature_idx]\n",
+    "        if val <= node.threshold:\n",
+    "            return self.node_prediction(row, node.left)\n",
+    "        else:\n",
+    "            return self.node_prediction(row, node.right)\n",
     "        \n",
+    "    def predict(self, predictors):\n",
+    "        pred = [self.node_prediction(val, self.root) for val in predictors]\n",
+    "        return pred\n",
+    "    \n",
     "    def print_tree(self):\n",
     "        lines = []\n",
     "        global_node_id = 0\n",
@@ -217,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "id": "0eb808cc",
    "metadata": {},
    "outputs": [],
@@ -227,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "dec3ad85",
    "metadata": {},
    "outputs": [],
@@ -238,7 +251,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
+   "id": "826d794e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "f11aab4b",
    "metadata": {},
    "outputs": [],
@@ -248,20 +269,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c7a1d967",
+   "execution_count": 55,
+   "id": "0de33902",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X = df.iloc[:, :-1].values\n",
+    "Y = df.iloc[:, -1].values.reshape(-1,1)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=.2, random_state=41)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "id": "c7a1d967",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_df = pd.DataFrame(X_train, columns = df.iloc[:,:-1].columns)\n",
+    "Y_train_df = pd.DataFrame(Y_train, columns = [\"target\"])\n",
+    "df_train = pd.concat([X_train_df, Y_train_df], axis = 1)\n",
+    "\n",
+    "X_test_df = pd.DataFrame(X_test, columns = df.iloc[:,:-1].columns)\n",
+    "Y_test_df = pd.DataFrame(Y_test, columns = [\"target\"])\n",
+    "df_test = pd.concat([X_test_df, Y_test_df], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "id": "edfc9fa6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "d2 = DecisionTreeClassifier(3, 3)\n",
+    "d2.fit(df_train, \"target\")\n",
+    "d2.show_tree()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "64d2f5bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9333333333333333"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y_pred = d2.predict(X_test) \n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy_score(Y_test, Y_pred)"
    ]
   },
   {
