--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,3 +4,15 @@ Change Log
 0.0.1 (4/20/2023)
 -----------------
 -First Release
+
+-----------------
+
+0.0.2 (4/21/2023)
+-----------------
+-Packaging fixes
+
+-----------------
+
+0.0.3 (4/24/2023)
+-----------------
+-Directory changes
